Property keys edited

--- a/src/main/resources/cz/muni/fi/pv168/hotel/gui/i18n_cs.properties
+++ b/src/main/resources/cz/muni/fi/pv168/hotel/gui/i18n_cs.properties
@@ -1,9 +1,10 @@
-MainWindow.title=Rezervační systém
+MainWindow.windowTitle=Rezervační systém
 MainWindow.roomLabel=Pokoj č.
-ButtonPanel.newReservation=Nová rezervace
-ButtonPanel.cancelReservation=Zrušit rezervaci
-ButtonPanel.checkIn=Zahájit pobyt
-ButtonPanel.checkOut=Ukončit pobyt
-ButtonPanel.reservationInfo=Info o rezervacích
-ButtonPanel.roomInfo=Info o pokojích
-ButtonPanel.settings=Nastavení
+ButtonPanel.newReservationButton=Nová rezervace
+ButtonPanel.cancelReservationButton=Zrušit rezervaci
+ButtonPanel.checkInButton=Zahájit pobyt
+ButtonPanel.checkOutButton=Ukončit pobyt
+ButtonPanel.reservationInfoButton=Info o rezervacích
+ButtonPanel.roomInfoButton=Info o pokojích
+ButtonPanel.settingsButton=Nastavení
+ErrorDialog.windowTitle=Chyba
