ReservationInfo error messages added

--- a/src/main/resources/cz/muni/fi/pv168/hotel/gui/forms/i18n_cs.properties
+++ b/src/main/resources/cz/muni/fi/pv168/hotel/gui/forms/i18n_cs.properties
@@ -26,6 +26,8 @@ ReservationInfo.guestsLabel=Počet hostů
 ReservationInfo.fromLabel=Příjezd
 ReservationInfo.toLabel=Odjezd
 ReservationInfo.roomNumber=Číslo pokoje
+ReservationInfo.guestsError=Počet hostů musí být číslo
+ReservationInfo.reservationError=Nebyla zvolena žádná rezervace
 CheckOut.windowTitle=Ukončit pobyt
 CheckOut.confirmButton=Potvrdit
 CheckOut.cancelButton=Zrušit
