Early checkout situation implemented

--- a/src/main/resources/cz/muni/fi/pv168/hotel/gui/forms/i18n_cs.properties
+++ b/src/main/resources/cz/muni/fi/pv168/hotel/gui/forms/i18n_cs.properties
@@ -33,6 +33,7 @@ CheckOut.confirmButton=Potvrdit
 CheckOut.cancelButton=Zrušit
 CheckOut.selectionError=Nebyla zvolena žádná rezervace
 CheckOut.clientLabel=Klient
+CheckOut.guestsLabel=Počet hostů
 CheckOut.nightsLabel=Počet nocí
 CheckOut.roomCostLabel=Cena pokoje za noc
 CheckOut.feesLabel=Místní poplatek za osobu a noc
