--- a/src/main/resources/cz/muni/fi/pv168/hotel/gui/forms/i18n_cs.properties
+++ b/src/main/resources/cz/muni/fi/pv168/hotel/gui/forms/i18n_cs.properties
@@ -40,3 +40,8 @@ CheckOut.feesLabel=Místní poplatek za osobu a noc
 CheckOut.totalLabel=Celkem
 RoomInfo.windowTitle=Info o pokojích
 Settings.windowTitle=Nastavení
+Settings.fileError=Chyba v souboru s nastavením
+Settings.numberError=Prosím zadejte validní číslo
+Settings.feesLabel=Místní poplatky:
+Settings.confirmButton=Potvrdit
+Settings.cancelButton=Storno
