I18N added for some texts

--- a/src/main/resources/cz/muni/fi/pv168/hotel/rooms/i18n_cs.properties
+++ b/src/main/resources/cz/muni/fi/pv168/hotel/rooms/i18n_cs.properties
@@ -1,3 +1,5 @@
 Room.roomLabel=Pokoj č.
 Room.type=typ pokoje
 Room.pricePerNight=cena za noc
+Room.standardBeds=jednolůžka
+Room.kingsizeBeds=dvojlůžka
