Guest info implemented

--- a/src/main/resources/cz/muni/fi/pv168/hotel/gui/i18n_cs.properties
+++ b/src/main/resources/cz/muni/fi/pv168/hotel/gui/i18n_cs.properties
@@ -5,6 +5,7 @@ ButtonPanel.cancelReservationButton=Zrušit rezervaci
 ButtonPanel.checkInButton=Zahájit pobyt
 ButtonPanel.checkOutButton=Ukončit pobyt
 ButtonPanel.reservationInfoButton=Info o rezervacích
+ButtonPanel.guestsInfoButton=Info o hostech
 ButtonPanel.roomInfoButton=Info o pokojích
 ButtonPanel.settingsButton=Nastavení
 ErrorDialog.windowTitle=Chyba
