--- a/src/main/resources/cz/muni/fi/pv168/hotel/gui/forms/i18n_cs.properties
+++ b/src/main/resources/cz/muni/fi/pv168/hotel/gui/forms/i18n_cs.properties
@@ -50,4 +50,5 @@ Settings.cancelButton=Storno
 ErrorDialog.windowTitle=Chyba
 RoomPicker.checkColumn=Výběr
 RoomPicker.descriptionColumn=Pokoj
-
+GuestsInfo.windowTitle=Hosté
+GuestsInfo.reservationLabel=Rezervace
