Check for invalid dates + localization added

--- a/src/main/resources/cz/muni/fi/pv168/hotel/gui/forms/i18n_cs.properties
+++ b/src/main/resources/cz/muni/fi/pv168/hotel/gui/forms/i18n_cs.properties
@@ -46,6 +46,7 @@ CheckIn.name=Jméno
 CheckIn.numberOfGuests=Počet hostů
 CheckIn.noResSelectedError=Není zvolena rezervace
 CheckIn.invalidNumOfGuestsError=Nesprávný počet hostů zadán
+CheckIn.invalidDateError=Prosím zvolte validní datum
 CheckIn.notAllFieldsFilledError=Všechny položky musí být vyplněny
 CheckIn.birthDate=Datum narození
 CheckIn.IDnumber=Číslo OP
