Walk-in reservation preparation done

--- a/src/main/resources/cz/muni/fi/pv168/hotel/gui/forms/i18n_cs.properties
+++ b/src/main/resources/cz/muni/fi/pv168/hotel/gui/forms/i18n_cs.properties
@@ -1,6 +1,7 @@
 NewReservation.windowTitle=Nová rezervace
 NewReservation.confirmButton=Potvrdit
 NewReservation.cancelButton=Storno
+NewReservation.checkinButton=K ubytování
 NewReservation.nameLabel=Jméno a příjmení
 NewReservation.phoneLabel=Tel. číslo
 NewReservation.emailLabel=Email
