Validation of entered data added + localized

--- a/src/main/resources/cz/muni/fi/pv168/hotel/gui/forms/i18n_cs.properties
+++ b/src/main/resources/cz/muni/fi/pv168/hotel/gui/forms/i18n_cs.properties
@@ -29,6 +29,8 @@ ReservationInfo.toLabel=Odjezd
 ReservationInfo.roomNumber=Číslo pokoje
 ReservationInfo.guestsError=Počet hostů musí být číslo
 ReservationInfo.bedError=Ve zvolených pokojích není dostatek postelí
+ReservationInfo.nameError=Ve jméně jsou nepovolené znaky
+ReservationInfo.emailError=Zadejte validní nebo žádný email
 ReservationInfo.dateError=Odjezd musí být až po příjezdu
 ReservationInfo.fieldsError=Vyplňte všechny požadované informace
 ReservationInfo.reservationError=Nebyla zvolena žádná rezervace
