Validation of entered data added + localized

--- a/src/main/resources/cz/muni/fi/pv168/hotel/gui/forms/i18n_cs.properties
+++ b/src/main/resources/cz/muni/fi/pv168/hotel/gui/forms/i18n_cs.properties
@@ -29,7 +29,9 @@ ReservationInfo.toLabel=Odjezd
 ReservationInfo.roomNumber=Číslo pokoje
 ReservationInfo.guestsError=Počet hostů musí být číslo
 ReservationInfo.bedError=Ve zvolených pokojích není dostatek postelí
-ReservationInfo.dateError=Odjezd musí být až po příjezdu
+ReservationInfo.nameError=Ve jméně jsou nepovolené znaky
+ReservationInfo.emailError=Zadejte validní nebo žádný email
+ReservationInfo.dateError=Zvolená data nejsou validní
 ReservationInfo.fieldsError=Vyplňte všechny požadované informace
 ReservationInfo.reservationError=Nebyla zvolena žádná rezervace
 CheckOut.windowTitle=Ukončit pobyt
