--- a/src/main/resources/cz/muni/fi/pv168/hotel/gui/forms/i18n_cs.properties
+++ b/src/main/resources/cz/muni/fi/pv168/hotel/gui/forms/i18n_cs.properties
@@ -70,3 +70,6 @@ RoomPicker.checkColumn=Výběr
 RoomPicker.descriptionColumn=Pokoj
 GuestsInfo.windowTitle=Hosté
 GuestsInfo.reservationLabel=Rezervace
+GuestTable.birthDate=Datum narození
+GuestTable.IDnumber=Číslo OP
+GuestTable.name=Jméno
