Email field validation added

--- a/src/main/resources/cz/muni/fi/pv168/hotel/gui/forms/i18n_cs.properties
+++ b/src/main/resources/cz/muni/fi/pv168/hotel/gui/forms/i18n_cs.properties
@@ -30,6 +30,7 @@ ReservationInfo.roomNumber=Číslo pokoje
 ReservationInfo.guestsError=Počet hostů musí být číslo
 ReservationInfo.bedError=Ve zvolených pokojích není dostatek postelí
 ReservationInfo.nameError=Ve jméně jsou nepovolené znaky
+ReservationInfo.phoneError=Telefonní číslo je v nepovoleném formátu
 ReservationInfo.emailError=Zadejte validní nebo žádný email
 ReservationInfo.dateError=Zvolená data nejsou validní
 ReservationInfo.fieldsError=Vyplňte všechny požadované informace
