Swing implemented in CheckIn, room column added to GuestTable

--- a/src/main/resources/cz/muni/fi/pv168/hotel/gui/forms/i18n_cs.properties
+++ b/src/main/resources/cz/muni/fi/pv168/hotel/gui/forms/i18n_cs.properties
@@ -73,3 +73,4 @@ GuestsInfo.reservationLabel=Rezervace
 GuestTable.birthDate=Datum narození
 GuestTable.IDnumber=Číslo OP
 GuestTable.name=Jméno
+GuestTable.roomNumber=Číslo pokoje
