Room comboBox added to addDialog in CheckIn

--- a/src/main/resources/cz/muni/fi/pv168/hotel/gui/forms/i18n_cs.properties
+++ b/src/main/resources/cz/muni/fi/pv168/hotel/gui/forms/i18n_cs.properties
@@ -58,6 +58,7 @@ CheckIn.cancel=Zrušit
 CheckIn.add=Přidat
 CheckIn.delete=Odebrat
 CheckIn.rooms=Pokoje
+CheckIn.roomNumber=Pokoj číslo
 RoomInfo.windowTitle=Info o pokojích
 Settings.windowTitle=Nastavení
 Settings.fileError=Chyba v souboru s nastavením
