Room info finished with JTable, localization and SwingWorker

--- a/src/main/resources/cz/muni/fi/pv168/hotel/gui/forms/i18n_cs.properties
+++ b/src/main/resources/cz/muni/fi/pv168/hotel/gui/forms/i18n_cs.properties
@@ -59,7 +59,11 @@ CheckIn.cancel=Zrušit
 CheckIn.add=Přidat
 CheckIn.delete=Odebrat
 CheckIn.rooms=Pokoje
-RoomInfo.windowTitle=Info o pokojích
+RoomInfo.windowTitle=Pokoje
+RoomInfo.roomNumberColumn=Pokoj
+RoomInfo.singleBedsColumn=Jednoduché postele
+RoomInfo.kingSizeBedsColumn=Manželské postele
+RoomInfo.roomPriceColumn=Cena za noc
 Settings.windowTitle=Nastavení
 Settings.fileError=Chyba v souboru s nastavením
 Settings.numberError=Prosím zadejte validní číslo
