Overfilling of a room in CheckIn prevented

--- a/src/main/resources/cz/muni/fi/pv168/hotel/gui/forms/i18n_cs.properties
+++ b/src/main/resources/cz/muni/fi/pv168/hotel/gui/forms/i18n_cs.properties
@@ -59,6 +59,8 @@ CheckIn.cancel=Zrušit
 CheckIn.add=Přidat
 CheckIn.delete=Odebrat
 CheckIn.rooms=Pokoje
+CheckIn.roomNumber=Číslo pokoje
+CheckIn.overfilledRoomError=Pokoj přeplněn
 RoomInfo.windowTitle=Pokoje
 RoomInfo.roomNumberColumn=Pokoj
 RoomInfo.singleBedsColumn=Jednoduché postele
