WIP: priceWindow in CheckIn

--- a/src/main/resources/cz/muni/fi/pv168/hotel/gui/forms/i18n_cs.properties
+++ b/src/main/resources/cz/muni/fi/pv168/hotel/gui/forms/i18n_cs.properties
@@ -61,6 +61,9 @@ CheckIn.delete=Odebrat
 CheckIn.rooms=Pokoje
 CheckIn.roomNumber=Číslo pokoje
 CheckIn.overfilledRoomError=Pokoj přeplněn
+CheckIn.unfilledRoom=Nezaplněný pokoj
+CheckIn.roomNotFilled=Následující pokoj není plný
+CheckIn.choosePrice=Prosím, zadejte cenu
 RoomInfo.windowTitle=Pokoje
 RoomInfo.roomNumberColumn=Pokoj
 RoomInfo.singleBedsColumn=Jednoduché postele
