PriceWindow in CheckIn now works

--- a/src/main/resources/cz/muni/fi/pv168/hotel/gui/forms/i18n_cs.properties
+++ b/src/main/resources/cz/muni/fi/pv168/hotel/gui/forms/i18n_cs.properties
@@ -64,6 +64,7 @@ CheckIn.overfilledRoomError=Pokoj přeplněn
 CheckIn.unfilledRoom=Nezaplněný pokoj
 CheckIn.roomNotFilled=Následující pokoj není plný
 CheckIn.choosePrice=Prosím, zadejte cenu
+CheckIn.current=stávající
 RoomInfo.windowTitle=Pokoje
 RoomInfo.roomNumberColumn=Pokoj
 RoomInfo.singleBedsColumn=Jednoduché postele
