Localization of Reorganisation added

--- a/src/main/resources/cz/muni/fi/pv168/hotel/gui/forms/i18n_cs.properties
+++ b/src/main/resources/cz/muni/fi/pv168/hotel/gui/forms/i18n_cs.properties
@@ -79,3 +79,7 @@ GuestTable.birthDate=Datum narození
 GuestTable.IDnumber=Číslo OP
 GuestTable.name=Jméno
 GuestTable.roomNumber=Číslo pokoje
+Reorganisation.windowTitle=Reorganizace pokojů
+Reorganisation.reservationLabel=Rezervace
+Reorganisation.oldRoomLabel=Přesun z
+Reorganisation.newRoomLabel=do
