Oldprice added to Combobox in CheckIn

--- a/src/main/resources/cz/muni/fi/pv168/hotel/gui/forms/i18n_cs.properties
+++ b/src/main/resources/cz/muni/fi/pv168/hotel/gui/forms/i18n_cs.properties
@@ -65,6 +65,7 @@ CheckIn.unfilledRoom=Nezaplněný pokoj
 CheckIn.roomNotFilled=Následující pokoj není plný
 CheckIn.choosePrice=Prosím, zadejte cenu
 CheckIn.current=stávající
+CheckIn.old=stará cena
 RoomInfo.windowTitle=Pokoje
 RoomInfo.roomNumberColumn=Pokoj
 RoomInfo.singleBedsColumn=Jednoduché postele
