DatePicker bug fixed

--- a/src/main/resources/cz/muni/fi/pv168/hotel/gui/forms/i18n_cs.properties
+++ b/src/main/resources/cz/muni/fi/pv168/hotel/gui/forms/i18n_cs.properties
@@ -11,7 +11,12 @@ NewReservation.toLabel=Odjezd
 NewReservation.roomNumber=Číslo pokoje
 NewReservation.nameEmptyError=Musí být uvedené jméno
 NewReservation.phoneEmptyError=Musí být uvedený telefon
+NewReservation.emailFormatError = Nesprávny formát emailu
+NewReservation.phoneFormatError = Nesprávny formát tel.čísla
 NewReservation.guestsError=Počet hostů musí být číslo
+NewReservation.noRoom=
+NewReservation.roomFull= Pokoj plný 
+NewReservation.noSpace =
 CancelReservation.windowTitle=Zrušit rezervaci
 CancelReservation.reservation=Rezervace
 CancelReservation.confirmButton=Potvrdit
