--- a/src/main/resources/cz/muni/fi/pv168/hotel/gui/forms/i18n_cs.properties
+++ b/src/main/resources/cz/muni/fi/pv168/hotel/gui/forms/i18n_cs.properties
@@ -10,6 +10,7 @@ NewReservation.fromLabel=Příjezd
 NewReservation.toLabel=Odjezd
 NewReservation.roomNumber=Číslo pokoje
 NewReservation.nameEmptyError=Musí být uvedené jméno
+NewReservation.nameFormatError =Ve jméně jsou nepovolené znaky
 NewReservation.phoneEmptyError=Musí být uvedený telefon
 NewReservation.emailFormatError = Nesprávny formát emailu
 NewReservation.phoneFormatError = Nesprávny formát tel.čísla
