Reorganisation dialog finished

--- a/src/main/resources/cz/muni/fi/pv168/hotel/gui/forms/i18n_cs.properties
+++ b/src/main/resources/cz/muni/fi/pv168/hotel/gui/forms/i18n_cs.properties
@@ -44,6 +44,7 @@ CheckOut.guestsLabel=Počet hostů
 CheckOut.nightsLabel=Počet nocí
 CheckOut.feesLabel=Místní poplatek za osobu a noc
 CheckOut.totalLabel=Celkem
+CheckOut.roomNumberLabel=Pokoj č.
 CheckIn.windowTitle=Zahájit pobyt
 CheckIn.reservation=Rezervace
 CheckIn.name=Jméno
@@ -90,3 +91,5 @@ Reorganisation.windowTitle=Reorganizace pokojů
 Reorganisation.reservationLabel=Rezervace
 Reorganisation.oldRoomLabel=Přesun z
 Reorganisation.newRoomLabel=do
+Reorganisation.okButton=Potvrdit
+Reorganisation.cancelButton=Storno
