--- a/src/main/resources/cz/muni/fi/pv168/hotel/gui/forms/i18n_cs.properties
+++ b/src/main/resources/cz/muni/fi/pv168/hotel/gui/forms/i18n_cs.properties
@@ -15,9 +15,9 @@ NewReservation.phoneEmptyError=Musí být uvedený telefon
 NewReservation.emailFormatError = Nesprávny formát emailu
 NewReservation.phoneFormatError = Nesprávny formát tel.čísla
 NewReservation.guestsError=Počet hostů musí být číslo
-NewReservation.noRoom=
-NewReservation.roomFull= Pokoj plný 
-NewReservation.noSpace =
+NewReservation.noRoom= Není zvolen žádný pokoj
+NewReservation.roomFull= Pokoj plný
+NewReservation.noSpace = Nedostatečná kapacita zvolených pokojů
 CancelReservation.windowTitle=Zrušit rezervaci
 CancelReservation.reservation=Rezervace
 CancelReservation.confirmButton=Potvrdit
