Linux GUI issues fixed

--- a/src/main/resources/cz/muni/fi/pv168/hotel/gui/i18n_cs.properties
+++ b/src/main/resources/cz/muni/fi/pv168/hotel/gui/i18n_cs.properties
@@ -1,5 +1,5 @@
 MainWindow.windowTitle=Rezervační systém hotelu
-MainWindow.roomLabel=Pokoj č.
+MainWindow.roomLabel=Pokoj 
 MainWindow.initError=Chyba při spouštění aplikace
 ButtonPanel.newReservationButton=Nová rezervace
 ButtonPanel.cancelReservationButton=Zrušit rezervaci
