Error message localization added

--- a/src/main/resources/cz/muni/fi/pv168/hotel/gui/forms/i18n_cs.properties
+++ b/src/main/resources/cz/muni/fi/pv168/hotel/gui/forms/i18n_cs.properties
@@ -22,6 +22,7 @@ CancelReservation.windowTitle=Zrušit rezervaci
 CancelReservation.reservation=Rezervace
 CancelReservation.confirmButton=Potvrdit
 CancelReservation.cancelButton=Storno
+CancelReservation.reservationError=Žádná zvolená rezervace
 ReservationInfo.windowTitle=Info o rezervaci
 ReservationInfo.reservationLabel=Rezervace
 ReservationInfo.confirmButton=Potvrdit
@@ -67,6 +68,12 @@ CheckIn.add=Přidat
 CheckIn.delete=Odebrat
 CheckIn.rooms=Pokoje
 CheckIn.roomNumber=Pokoj číslo
+CheckIn.overfilledRoomError=Pokoj přeplněn
+CheckIn.unfilledRoom=Nezaplněný pokoj
+CheckIn.roomNotFilled=Následující pokoj není plný
+CheckIn.choosePrice=Zvolte cenu
+CheckIn.current=stávající
+CheckIn.old=stará cena
 RoomInfo.windowTitle=Pokoje
 RoomInfo.roomNumberColumn=Pokoj
 RoomInfo.singleBedsColumn=Jednoduché postele
@@ -75,7 +82,7 @@ RoomInfo.roomPriceColumn=Cena za noc
 Settings.windowTitle=Nastavení
 Settings.fileError=Chyba v souboru s nastavením
 Settings.numberError=Prosím zadejte validní číslo
-Settings.feesLabel=Místní poplatky:
+Settings.feesLabel=Místní poplatky
 Settings.confirmButton=Potvrdit
 Settings.cancelButton=Storno
 ErrorDialog.windowTitle=Chyba
